# server/routes.go
@@ -2,6 +2,7 @@ package server
 
 const (
 	clientPath           string = "/v1/client"
+	productPath          string = "/v1/product"
 	contentTypeHeaderKey string = "Content-Type"
 	// application/json header value for Content-Type header key
 	appJSONContentTypeHeaderVal string = "application/json"
